--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Reconectar</title>
+<meta http-equiv="refresh" content="0; url=https://ianlopez03.github.io/">
 </head>
 <body>
 </body>
