--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>Reconectar</title>
-<meta http-equiv="refresh" content="0; url=https://ianlopez03.github.io/Secciones-/ActividadClase/WebContent/ActClase.html">
-</head>
+<meta http-equiv="refresh" content="0; url=https://ianlopez03.github.io/Secciones-/">
+</head>https://ianlopez03.github.io/Secciones-/
 <body>
 </body>
 </html> 
