--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Reconectar</title>
-<meta http-equiv="refresh" content="0; url=https://ianlopez03.github.io/Secciones-/">
+<meta http-equiv="refresh" content="0; url=https://ianlopez03.github.io/Secciones-/ActividadClase/WebContent/ActClase.html">
 </head>https://ianlopez03.github.io/Secciones-/
 <body>
 </body>
